<resources>
    <string name="app_name">CableService</string>
    <string name="batteria_1">1 Tom 1 Timpano</string>
    <string name="batteria_2">2 Tom 1 Timpano</string>
    <string name="batteria_3">1 Tom 2 Timpano</string>
    <string name="batteria_4">2 Tom 2 Timpano</string>
    <string name="batteria">Batteria</string>
    <string name="basso">Basso</string>
    <string name="percussioni">Percussioni</string>
    <string name="tastiera">Tastiera</string>
    <string name="percussioni_1">Percussioni 1</string>
    <string name="percussioni_2">Percussioni 2</string>
    <string name="percussioni_3">Percussioni 3</string>
    <string name="tastiera_1">2 tastiere</string>
    <string name="tastiera_2">tastiera + seq</string>
    <string name="tastiera_3">tastiera + seq + click</string>
    <string name="tastiera_4">2 tastiere + seq</string>
    <string name="tastiera_5">2 tastiere + seq + click</string>
    <string name="tastiera_6">2 tastiere + piano</string>
    <string name="tastiera_7">tastiere + seq + piano</string>
    <string name="tastiera_8">tastiere + seq + click + piano</string>
    <string name="tastiera_9">2 tastiere + seq + piano</string>
    <string name="tastiera_10">2 tastiere + seq + click + piano</string>
    <string name="chitarra">Chitarra</string>
    <string name="sax">Sax</string>
    <string name="voci">Voci</string>
    <string name="cori">Cori</string>
    <string name="image">image</string>
    <string name="canali">CANALI</string>
    <string name="chitarra_1">Chitarra 1</string>
    <string name="chitarra_2">Chitarra 2</string>
    <string name="chitarra_3">Chitarra 3</string>
    <string name="chitarra_4">Chitarra 4</string>
    <string name="chitarra_5">Chitarra 5</string>
    <string name="chitarra_6">Chitarra 6</string>
    <string name="carica_canali">Carica canali</string>
    <string name="voci_1">Voci 1</string>
    <string name="voci_2">Voci 2</string>
    <string name="voci_3">Voci 3</string>
    <string name="cori_1">Cori 1</string>
    <string name="cori_2">Cori 2</string>
    <string name="cori_3">Cori 3</string>
    <string name="inserire_pre_set">Inserire pre-set %1$s</string>
    <string name="scegliere_pre_set">Scegliere almeno un pre-set %1$s</string>
    <string name="ok">OK</string>
    <string name="modifica">Modifica</string>
    <string name="info_preset">INFO PRESET</string>
    <string name="info_1s">%1$s</string>
    <string name="salva">Salva</string>
    <string name="annulla">Annulla</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="titolo">Titolo</string>
    <string name="contenuto_scorrevole">contenuto scorrevole</string>
    <string name="tabulazioni">\t\t</string>
    <string name="modifica_preset_s_1">%1$s</string>
    <string name="nome_preset_s_1">Nuovo nome preset</string>
    <string name="sicuro_di_voler_eliminare">Sicuro di voler eliminare %1$s?</string>
    <string name="di">D.I.</string>
    <string name="mic">MIC</string>
    <string name="scelta_mic_e_di_disattivata">Scelta MIC e DI disattivata</string>
    <string name="scelta_mic_e_di_attivata">Scelta MIC e DI attivata</string>
    <string name="dimic_attivo">DIMIC_attivo</string>
    <string name="aggiungi_un_valore">Aggiungi un valore</string>
    <string name="attiva_disattiva_mic_e_di">Attiva/Disattiva MIC e DI</string>
    <string name="come_funziona_l_app">Come funziona l\'app?</string>
    <string name="informazioni_generali">Informazioni generali</string>
    <string name="a_differenza_degli_altri_del_gruppo_chitarra_si_possono_selezionare_pi_voci_che_verranno_caricate_in_modo_separato">A differenza degli altri del gruppo chitarra si possono selezionare più voci che verranno caricate in modo separato</string>
    <string name="il_gruppo_batteria_contiene_vari_preset_associati_a_quel_gruppo">Il gruppo batteria contiene vari preset associati a quel gruppo</string>
    <string name="premendo_la_checkbox_si_possono_scegliere_i_preset_in_precedenza_caricati_basta_sceglierne_uno_per_poi_creare_la_channel_list">Premendo la checkbox si possono scegliere i preset in precedenza caricati, basta sceglierne uno per poi creare la channel list</string>
    <string name="infine_premi_su_carica_canali_per_avere_la_tua_channel_list">Infine premi su carica canali per avere la tua channel list</string>
    <string name="tenendo_premuto_sul_gruppo_possibile_aggiungere_dei_preset">Tenendo premuto sul gruppo è possibile aggiungere dei preset.</string>
    <string name="schermata_per_impostare_un_preset_nella_parte_alta_si_pu_inserire_un_nome_nella_parte_bassa_vanno_inseriti_i_singoli_strumenti_che_verranno_caricati_come_parte_del_gruppo_per_salvare_il_preset_basta_premere_su_salva_invece_per_aggiungere_una_nuova_riga_basta_premere_su_aggiungi">Schermata per impostare un preset. Nella parte alta si può inserire un nome, nella parte bassa vanno inseriti i singoli strumenti che verranno caricati come parte del gruppo. Per salvare il preset basta premere su salva. Invece per aggiungere una nuova riga basta premere su aggiungi.</string>
    <string name="tenendo_premuto_un_preset_si_potr_modificare_o_eliminare">Tenendo premuto un preset si potrà modificare o eliminare.</string>
    <string name="premendo_su_elimina_verr_eliminato_il_preset_premendo_su_modifica_si_aprir_la_schermata_per_modificare_il_preset">Schermata di riepilogo preset. Premendo su elimina verrà eliminato il preset. Premendo su modifica si aprirà la schermata per modificare il preset simile a quella per crearlo.</string>
    <string name="schermata_di_modifica_dentro_la_quale_possibile_cambiare_i_vecchi_dati_inseriti_aggiungere_una_nuova_riga_premendo_l_apposito_bottone_o_eliminare_una_riga_facendo_swipe_verso_destra_per_la_riga_che_si_vuole_eliminiare">Schermata di modifica dentro la quale è possibile cambiare i vecchi dati inseriti, aggiungere una nuova riga premendo l\'apposito bottone o eliminare una riga facendo swipe verso destra per la riga che si vuole eliminiare.</string>
    <string name="https_github_com_dippanz">https://github.com/dippanz</string>
    <string name="profilo_github">Profilo GitHub:\t\t</string>
    <string name="creato_da_dippanz">Creato da: dippanz</string>
    <string name="versione_dell_app_1_0_0">Versione dell\'app: 1.0.0</string>
    <string name="contatti_emanuele110_tiscali_it">Contatti: emanuele110@tiscali.it</string>
    <string name="applicazione_sviluppata_per_semplificare_la_creazione_di_channel_list_effettuando_operazioni_veloci">Applicazione sviluppata per semplificare la creazione di Channel List effettuando operazioni veloci e facili.</string>
    <string name="informazioni_su">Informazioni su CableService</string>
    <string name="info_e_contatti">Info e contatti</string>


    <string-array name="batteria1String">
        <item>Kik</item>
        <item>Snare</item>
        <item>Charleston</item>
        <item>Tom</item>
        <item>Timpano</item>
        <item>Over</item>
        <item>Over</item>
    </string-array>

    <string-array name="batteria2String">
        <item>Kik</item>
        <item>Snare</item>
        <item>Charleston</item>
        <item>Tom</item>
        <item>Tom</item>
        <item>Timpano</item>
        <item>Over</item>
        <item>Over</item>
    </string-array>

    <string-array name="batteria3String">
        <item>Kik</item>
        <item>Snare</item>
        <item>Charleston</item>
        <item>Tom</item>
        <item>Timpano</item>
        <item>Timpano</item>
        <item>Over</item>
        <item>Over</item>
    </string-array>

    <string-array name="batteria4String">
        <item>Kik</item>
        <item>Snare</item>
        <item>Charleston</item>
        <item>Tom</item>
        <item>Tom</item>
        <item>Timpano</item>
        <item>Timpano</item>
        <item>Over</item>
        <item>Over</item>
    </string-array>

    <string-array name="percussioni1String">
        <item>Octapad L %D.I.</item>
        <item>Octapad R %D.I.</item>
        <item>Over %MIC</item>
        <item>Over R (Roto toms) %MIC</item>
        <item>Rullante %MIC</item>
        <item>Tom %MIC</item>
        <item>Timpano %MIC</item>
        <item>Timpano %MIC</item>
    </string-array>

    <string-array name="tastiera1String">
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
    </string-array>

    <string-array name="tastiera2String">
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Sequenze %D.I</item>
    </string-array>

    <string-array name="tastiera3String">
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Click %D.I</item>
        <item>Click %D.I</item>
    </string-array>

    <string-array name="tastiera4String">
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Sequenze %D.I</item>
    </string-array>

    <string-array name="tastiera5String">
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
        <item>Key L %D.I</item>
        <item>Key  %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Click %D.I</item>
        <item>Click %D.I</item>
    </string-array>

    <string-array name="tastiera6String">
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
        <item>Piano L %D.I</item>
        <item>Piano R %D.I</item>
    </string-array>

    <string-array name="tastiera7String">
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Piano L %D.I</item>
        <item>Piano R %D.I</item>
    </string-array>

    <string-array name="tastiera8String">
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Click %D.I</item>
        <item>Click %D.I</item>
        <item>Piano L %D.I</item>
        <item>Piano R %D.I</item>
    </string-array>

    <string-array name="tastiera9String">
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Piano L %D.I</item>
        <item>Piano R %D.I</item>
    </string-array>

    <string-array name="tastiera10String">
        <item>Key L %D.I</item>
        <item>Key R %D.I</item>
        <item>Key L %D.I</item>
        <item>Key  %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Sequenze %D.I</item>
        <item>Click %D.I</item>
        <item>Click %D.I</item>
        <item>Piano L %D.I</item>
        <item>Piano R %D.I</item>
    </string-array>

    <string-array name="chitarra1String">
        <item>El Gtr josh %MIC</item>
        <item>El Gtr Nick %MIC</item>
    </string-array>

    <string-array name="voci1String">
        <item>Fulvio</item>
        <item>Joshua</item>
        <item>Nick</item>
    </string-array>


    <string-array name="cori1String">
        <item>Floriana</item>
        <item>Anna</item>
        <item>Roberta</item>
    </string-array>

</resources>