<!-- res/layout/activity_about.xml -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informazioni_su"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applicazione_sviluppata_per_semplificare_la_creazione_di_channel_list_effettuando_operazioni_veloci"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contatti_emanuele110_tiscali_it"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versione_dell_app_1_0_0"
            android:layout_marginTop="16dp"/>

        <!-- Sezione sul creatore o sviluppatore -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!-- Aggiungi questa sezione nel tuo layout XML -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profilo_github"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textViewGitHubProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/https_github_com_dippanz"
                android:linksClickable="true"
                android:autoLink="web"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creato_da_dippanz"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</ScrollView>

